--- a/jupyter_russian/assignments_demo/assignment01_adult_pandas.ipynb
+++ b/jupyter_russian/assignments_demo/assignment01_adult_pandas.ipynb
@@ -52,10 +52,15 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {"collapsed": true},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "# чтоб картинки рисовались в тетрадке\n",
+    "%matplotlib inline \n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "plt.rcParams['figure.figsize'] = (10, 8)"
    ]
   },
   {
