--- a/jupyter_russian/assignments_demo/assignment01_adult_pandas.ipynb
+++ b/jupyter_russian/assignments_demo/assignment01_adult_pandas.ipynb
@@ -243,11 +243,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Male      21790\n",
+       "Female    10771\n",
+       "Name: sex, dtype: int64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data['sex'].value_counts()"
    ]
@@ -261,13 +274,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36.86"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Ваш код здесь"
+    "round(data[data['sex'] == 'Female']['age'].mean(), 2)"
    ]
   },
   {
@@ -279,13 +303,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0042074874850281012"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Ваш код здесь"
+    "data['native-country'].value_counts(normalize=True)['Germany']"
    ]
   },
   {
