--- a/jupyter_russian/assignments_demo/assignment01_adult_pandas.ipynb
+++ b/jupyter_russian/assignments_demo/assignment01_adult_pandas.ipynb
@@ -326,37 +326,94 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "**4-5. Каковы средние значения и среднеквадратичные отклонения возраста тех, кто получает более 50K в год (признак *salary*) и тех, кто получает менее 50K в год? **"
+ "source": [
+   "**4-5. Каковы средние значения и среднеквадратичные отклонения возраста тех, кто получает более 50K в год (признак *salary*) и тех, кто получает менее 50K в год? **"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>salary</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>&lt;=50K</th>\n",
+       "      <td>36.8</td>\n",
+       "      <td>14.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>&gt;50K</th>\n",
+       "      <td>44.2</td>\n",
+       "      <td>10.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        mean   std\n",
+       "salary            \n",
+       "<=50K   36.8  14.0\n",
+       ">50K    44.2  10.5"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Ваш код здесь"
+    "data.groupby(['salary'])['age'].agg(['mean', 'std']).round(1)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**6. Правда ли, что люди, которые получают больше 50k, имеют как минимум высшее образование? (признак *education – Bachelors, Prof-school, Assoc-acdm, Assoc-voc, Masters* или *Doctorate*)**"
+    "**6. Правда ли, что люди, которые получают больше 50k, имеют как минимум высшее образование? (признак *education - Bachelors, Prof-school, Assoc-acdm, Assoc-voc, Masters* или *Doctorate*)**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['HS-grad', 'Masters', 'Bachelors', 'Some-college', 'Assoc-voc',\n",
+       "       'Doctorate', 'Prof-school', 'Assoc-acdm', '7th-8th', '12th', '10th',\n",
+       "       '11th', '9th', '5th-6th', '1st-4th'], dtype=object)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Ваш код здесь"
+    "data[data['salary'] == '>50K']['education'].unique()"
    ]
   },
   {
@@ -368,13 +425,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "race                sex          \n",
+       "Amer-Indian-Eskimo  Female  count      119.000000\n",
+       "                            mean        37.117647\n",
+       "                            std         13.114991\n",
+       "                            min         17.000000\n",
+       "                            25%         27.000000\n",
+       "                            50%         36.000000\n",
+       "                            75%         46.000000\n",
+       "                            max         80.000000\n",
+       "                    Male    count      192.000000\n",
+       "                            mean        37.208333\n",
+       "                            std         12.049563\n",
+       "                            min         17.000000\n",
+       "                            25%         28.000000\n",
+       "                            50%         35.000000\n",
+       "                            75%         45.000000\n",
+       "                            max         82.000000\n",
+       "Asian-Pac-Islander  Female  count      346.000000\n",
+       "                            mean        35.089595\n",
+       "                            std         12.300845\n",
+       "                            min         17.000000\n",
+       "                            25%         25.000000\n",
+       "                            50%         33.000000\n",
+       "                            75%         43.750000\n",
+       "                            max         75.000000\n",
+       "                    Male    count      693.000000\n",
+       "                            mean        39.073593\n",
+       "                            std         12.883944\n",
+       "                            min         18.000000\n",
+       "                            25%         29.000000\n",
+       "                            50%         37.000000\n",
+       "                                         ...     \n",
+       "Other               Female  std         11.631599\n",
+       "                            min         17.000000\n",
+       "                            25%         23.000000\n",
+       "                            50%         29.000000\n",
+       "                            75%         39.000000\n",
+       "                            max         74.000000\n",
+       "                    Male    count      162.000000\n",
+       "                            mean        34.654321\n",
+       "                            std         11.355531\n",
+       "                            min         17.000000\n",
+       "                            25%         26.000000\n",
+       "                            50%         32.000000\n",
+       "                            75%         42.000000\n",
+       "                            max         77.000000\n",
+       "White               Female  count     8642.000000\n",
+       "                            mean        36.811618\n",
+       "                            std         14.329093\n",
+       "                            min         17.000000\n",
+       "                            25%         25.000000\n",
+       "                            50%         35.000000\n",
+       "                            75%         46.000000\n",
+       "                            max         90.000000\n",
+       "                    Male    count    19174.000000\n",
+       "                            mean        39.652498\n",
+       "                            std         13.436029\n",
+       "                            min         17.000000\n",
+       "                            25%         29.000000\n",
+       "                            50%         38.000000\n",
+       "                            75%         49.000000\n",
+       "                            max         90.000000\n",
+       "Name: age, dtype: float64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Ваш код здесь"
+    "pd.groupby(data, ['race', 'sex'])['age'].describe()"
    ]
   },
   {
@@ -386,13 +516,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>salary</th>\n",
+       "      <th>&lt;=50K</th>\n",
+       "      <th>&gt;50K</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>married</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>False</th>\n",
+       "      <td>0.936846</td>\n",
+       "      <td>0.063154</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>True</th>\n",
+       "      <td>0.584339</td>\n",
+       "      <td>0.415661</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "salary      <=50K      >50K\n",
+       "married                    \n",
+       "False    0.936846  0.063154\n",
+       "True     0.584339  0.415661"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Ваш код здесь"
+    "data['married'] = data['marital-status'].map(lambda x: x not in ['Never-married','Separated','Divorced'])\n",
+    "pd.crosstab(data['married'], data['salary'], normalize='index')"
    ]
   },
   {
@@ -404,13 +579,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max work load - 99 hours/week\n",
+      "Workers with max load - 85\n",
+      "Rich part - 29%\n"
+     ]
+    }
+   ],
    "source": [
-    "# Ваш код здесь"
+    "max_load = data['hours-per-week'].max()\n",
+    "print \"Max work load - {0} hours/week\".format(max_load)\n",
+    "\n",
+    "max_load_workers = data[data['hours-per-week'] == max_load]\n",
+    "print(\"Workers with max load - {0}\".format(max_load_workers.shape[0]))\n",
+    "\n",
+    "rich_part = max_load_workers['salary'].value_counts(normalize=True)['>50K']\n",
+    "print(\"Rich part - {0}%\".format(int(100 * rich_part)))"
    ]
   },
   {
@@ -422,13 +614,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "salary  native-country            \n",
+       "<=50K   ?                             40.164760\n",
+       "        Cambodia                      41.416667\n",
+       "        Canada                        37.914634\n",
+       "        China                         37.381818\n",
+       "        Columbia                      38.684211\n",
+       "        Cuba                          37.985714\n",
+       "        Dominican-Republic            42.338235\n",
+       "        Ecuador                       38.041667\n",
+       "        El-Salvador                   36.030928\n",
+       "        England                       40.483333\n",
+       "        France                        41.058824\n",
+       "        Germany                       39.139785\n",
+       "        Greece                        41.809524\n",
+       "        Guatemala                     39.360656\n",
+       "        Haiti                         36.325000\n",
+       "        Holand-Netherlands            40.000000\n",
+       "        Honduras                      34.333333\n",
+       "        Hong                          39.142857\n",
+       "        Hungary                       31.300000\n",
+       "        India                         38.233333\n",
+       "        Iran                          41.440000\n",
+       "        Ireland                       40.947368\n",
+       "        Italy                         39.625000\n",
+       "        Jamaica                       38.239437\n",
+       "        Japan                         41.000000\n",
+       "        Laos                          40.375000\n",
+       "        Mexico                        40.003279\n",
+       "        Nicaragua                     36.093750\n",
+       "        Outlying-US(Guam-USVI-etc)    41.857143\n",
+       "        Peru                          35.068966\n",
+       "                                        ...    \n",
+       ">50K    France                        50.750000\n",
+       "        Germany                       44.977273\n",
+       "        Greece                        50.625000\n",
+       "        Guatemala                     36.666667\n",
+       "        Haiti                         42.750000\n",
+       "        Honduras                      60.000000\n",
+       "        Hong                          45.000000\n",
+       "        Hungary                       50.000000\n",
+       "        India                         46.475000\n",
+       "        Iran                          47.500000\n",
+       "        Ireland                       48.000000\n",
+       "        Italy                         45.400000\n",
+       "        Jamaica                       41.100000\n",
+       "        Japan                         47.958333\n",
+       "        Laos                          40.000000\n",
+       "        Mexico                        46.575758\n",
+       "        Nicaragua                     37.500000\n",
+       "        Peru                          40.000000\n",
+       "        Philippines                   43.032787\n",
+       "        Poland                        39.000000\n",
+       "        Portugal                      41.500000\n",
+       "        Puerto-Rico                   39.416667\n",
+       "        Scotland                      46.666667\n",
+       "        South                         51.437500\n",
+       "        Taiwan                        46.800000\n",
+       "        Thailand                      58.333333\n",
+       "        Trinadad&Tobago               40.000000\n",
+       "        United-States                 45.505369\n",
+       "        Vietnam                       39.200000\n",
+       "        Yugoslavia                    49.500000\n",
+       "Name: hours-per-week, dtype: float64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Ваш код здесь"
+    "data.groupby(['salary', 'native-country'])['hours-per-week'].mean()"
    ]
   }
  ],
@@ -449,7 +714,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
